[package]
name = "ptv_data"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
plotters = "0.3"
indicatif = "0.16"
serde_derive = "1.0"
rayon = "1.5"

[[bin]]
name = "generateData"
path = "src/generateCSV.rs"

[[bin]]
name = "generateGraph"
path = "src/generateGraph.rs" 

[[bin]]
name = "generateGraph"
path = "src/generateGraph-15min.rs" 